fix templates style removing height as was causing issues on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,6 @@ h2{
 
 #templates div{
     color: #131a17;
-    height: 500px;
     background-repeat: no-repeat;
     background-position: center;
     padding: 10px;
